Remove overflow. Should fix scrollbar issue

--- a/stylesheets/components/_feature_slider.scss
+++ b/stylesheets/components/_feature_slider.scss
@@ -11,7 +11,6 @@
       padding: 0;
       list-style: none;
       display: block;
-      overflow: auto;
       text-align: left;
       // Placed on the parent to stop selection of white-space.
       user-select: none;
